# rime

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  VISION.md  conanfile.py
engine/app/: CMakeLists.txt  README.md  editor_host_main.cpp  main.cpp
engine/app/src/: application.cpp
engine/assets/: CMakeLists.txt  README.md
engine/assets/src/: asset_server.cpp  clip_sampler.cpp  cooked_reader.cpp  manifest.cpp  registry.cpp  sdf_sampler.cpp
engine/audio/: CMakeLists.txt  README.md
engine/audio/src/: audio.cpp
engine/capi/: CMakeLists.txt  README.md
engine/capi/src/: capi.cpp
engine/core/: CMakeLists.txt  README.md
engine/core/src/: version.cpp
engine/destruction/: CMakeLists.txt  README.md
engine/destruction/src/: damage.cpp  lifecycle.cpp  world.cpp  world_impl.hpp
engine/ecs/: CMakeLists.txt  README.md
engine/ecs/src/: archetype.cpp  chunk.cpp  schedule.cpp  (+5 more)
engine/editorhost/: CMakeLists.txt  README.md
engine/physics/: CMakeLists.txt  README.md
engine/platform/: CMakeLists.txt  README.md
engine/render/: CMakeLists.txt  README.md
engine/rhi/: CMakeLists.txt  README.md
engine/scene/: CMakeLists.txt  README.md
engine/stream/: CMakeLists.txt  README.md
engine/vfx/: CMakeLists.txt  README.md
samples/: CMakeLists.txt  README.md
samples/00-hello-window/: CMakeLists.txt  main.cpp
samples/01-hello-triangle/: CMakeLists.txt  main.cpp  triangle_render.hpp
samples/02-textured-quad/: CMakeLists.txt  main.cpp  quad_render.hpp
samples/03-icem-viewer/: CMakeLists.txt  assembly.hpp  camera.hpp  cap.hpp  chart.hpp  engine.hpp  field.hpp  iso.hpp  legend.hpp  main.cpp  mesh_render.hpp  provenance.hpp  provenance_view.hpp  stl.hpp  streamlines.hpp  turntable.hpp  ui.hpp  ui_font.hpp  ui_render.hpp  warp.hpp
samples/04-remote-view/: CMakeLists.txt  main.cpp
samples/05-ecs-playground/: CMakeLists.txt  main.cpp
samples/06-render-graph/: CMakeLists.txt  README.md  main.cpp
samples/07-first-light/: CMakeLists.txt  README.md  first_light.rscene  main.cpp
samples/08-gltf-zoo/: CMakeLists.txt  README.md  main.cpp
samples/09-physics-playground/: CMakeLists.txt  main.cpp
samples/10-destructible-wall/: CMakeLists.txt  README.md  main.cpp
samples/11-lit-rooms/: CMakeLists.txt  README.md  main.cpp
samples/codec_bench/: CMakeLists.txt  main.cpp
samples/jobs_core_saturation/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  application_test.cpp  editor_play_test.cpp  fixed_timestep_test.cpp
tests/assets/: CMakeLists.txt  asset_server_test.cpp  clip_fixture.hpp  clip_sampler_test.cpp  cooked_clip_test.cpp  cooked_destructible_test.cpp  cooked_material_test.cpp  cooked_mesh_sdf_test.cpp  cooked_mesh_test.cpp  cooked_skeleton_test.cpp  cooked_texture_test.cpp  fixture_test.cpp  manifest_test.cpp  material_fixture.hpp  mesh_fixture.hpp  registry_test.cpp  skeleton_fixture.hpp  texture_fixture.hpp
tests/audio/: CMakeLists.txt  audio_test.cpp
tests/capi/: CMakeLists.txt  capi_test.cpp
tests/core/: CMakeLists.txt  assert_test.cpp  byte_cursor_test.cpp  chase_lev_deque_test.cpp  event_channel_test.cpp  hash_test.cpp  jobs_test.cpp  log_test.cpp  math_test.cpp  memory_test.cpp  module_test.cpp  profile_test.cpp  quat_test.cpp  reflect_test.cpp  slot_map_test.cpp  transform_test.cpp  version_test.cpp
tests/destruction/: CMakeLists.txt  components_test.cpp  damage_test.cpp  events_test.cpp  lifecycle_test.cpp  world_test.cpp
tests/ecs/: CMakeLists.txt  change_detection_test.cpp  chunk_pool_test.cpp  chunk_test.cpp  command_buffer_test.cpp  component_registry_test.cpp  entity_directory_test.cpp  parallel_query_test.cpp  query_test.cpp  schedule_test.cpp  signature_test.cpp  transform_test.cpp  world_components_test.cpp  world_test.cpp
tests/editorhost/: CMakeLists.txt  editor_host_test.cpp
tests/physics/: CMakeLists.txt  broadphase_test.cpp  ccd_test.cpp  components_test.cpp  compound_test.cpp  events_test.cpp  hull_test.cpp  integration_test.cpp  islands_test.cpp  narrowphase_test.cpp  query_test.cpp  solver_test.cpp  stats_test.cpp  sync_test.cpp  unregister_test.cpp
tests/platform/: CMakeLists.txt  clock_test.cpp  event_test.cpp  filesystem_test.cpp  init_test.cpp  input_test.cpp  socket_test.cpp  threads_test.cpp  window_test.cpp
tests/render/: CMakeLists.txt  camera_test.cpp  clustered_test.cpp  ddgi_test.cpp  gbuffer_test.cpp  gi_thesis_test.cpp  gizmo_test.cpp  local_shadow_test.cpp  pbr_pipeline_test.cpp  pick_test.cpp  render_graph_test.cpp  render_test_support.hpp  scene_layer_test.cpp  sdf_clipmap_test.cpp  shadow_test.cpp  ssr_test.cpp  stl_test.cpp  viewer_frame_graph_test.cpp
tests/rhi/: CMakeLists.txt  assembly_offscreen_test.cpp  blend_mrt_test.cpp  cap_offscreen_test.cpp  chart_offscreen_test.cpp  compute_test.cpp  cooked_mip_test.cpp  depth_test.cpp  device_test.cpp  engine_offscreen_test.cpp  iso_offscreen_test.cpp  mesh_offscreen_test.cpp  mip_timestamp_test.cpp  offscreen_triangle_test.cpp  provenance_offscreen_test.cpp  pushconst_test.cpp  stencil_cap_test.cpp  streamlines_offscreen_test.cpp  texture_array_test.cpp  textured_quad_test.cpp  turntable_test.cpp  ubo_test.cpp  ui_offscreen_test.cpp  viscous_offscreen_test.cpp  volume_storage_test.cpp  volume_texture_test.cpp  warp_offscreen_test.cpp
tests/scene/: CMakeLists.txt  scene_format_test.cpp
tests/sdk_consumer/: CMakeLists.txt  README.md  main.cpp
tests/stream/: CMakeLists.txt  frame_codec_test.cpp  frame_streamer_test.cpp  latency_test.cpp  loopback_stream_test.cpp  protocol_fixtures_test.cpp  protocol_test.cpp  video_codec_test.cpp
tests/vfx/: CMakeLists.txt  dust_test.cpp
tests/viewer/: CMakeLists.txt  camera_test.cpp  cooked_dogfood_test.cpp
tools/: Cargo.toml  README.md  rust-toolchain.toml
tools/asset-pipeline/: Cargo.toml  FORMAT.md  README.md
tools/editor/: Cargo.toml  README.md
tools/rime-cli/: Cargo.toml
tools/rime-ffi/: Cargo.toml  README.md  build.rs
tools/rime-protocol/: Cargo.toml  README.md
(+411 files in other folders)
